@@ -8,7 +8,7 @@ version '1.0-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(11)
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -35,6 +35,7 @@ dependencies {
 test {
     useJUnit()
     testLogging.showStandardStreams = true
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }
 serenity {
     testRoot = "co.com.screenplay.project.runners"
